test_regress/t/t_modport_export_bad.out
%Error: t/t_modport_export_bad.v:20:8: Out-of-block definition port is not an interface port: clk (IEEE 1800-2023 25.7)
   20 |   task clk.send(input logic [7:0] val);
      |        ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
